# mkdocs-plugins

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
docs/: agent-skills.md  agent-tasks.md  ai-docs.md  ai-file-actions.md  ai-file-utils.md  ai-page-actions.md  ai-resources-page.md  copy-md.md  instant-preview-compat.md  instant-preview.md  link-processor.md  minify.md  page-toggle.md  plugin-integration.md  resolve-md.md  snippet-var-resolver.md
docs/helper_library/: ai-file-utils.md
helper_lib/: instant_preview.py  instant_preview_compat.py
helper_lib/ai_file_actions/: plugin.py
helper_lib/ai_file_utils/: ai_file_actions.json  ai_file_utils.py
plugins/agent_skills/: plugin.py
plugins/agent_tasks/: plugin.py
plugins/ai_docs/: plugin.py
plugins/ai_file_actions/: plugin.py
plugins/ai_file_utils/: ai_file_actions.json  ai_file_utils.py  plugin.py
plugins/ai_page_actions/: plugin.py
plugins/ai_resources_page/: plugin.py
plugins/copy_md/: plugin.py
plugins/instant_preview/: __init__.py  plugin.py
plugins/instant_preview_compat/: plugin.py
plugins/link_processor/: plugin.py
plugins/minify/: plugin.py
plugins/page_toggle/: plugin.py
plugins/resolve_md/: plugin.py
plugins/snippet_var_resolver/: plugin.py
tests/: README.md  __init__.py
tests/agent_skills/: test_agent_skills.py
tests/ai_docs/: test_agent_skills.py  test_ai_docs.py
tests/ai_file_actions/: test_ai_file_actions.py
tests/ai_file_utils/: test_ai_file_utils.py  test_plugin.py
tests/ai_page_actions/: test_ai_page_actions.py
tests/ai_resources_page/: test_ai_resources_page.py
tests/instant_preview/: __init__.py  test_instant_preview.py
tests/instant_preview_compat/: test_instant_preview_compat.py
tests/link_processor/: test_link_processor.py
tests/minify/: README.md  test_minify.py
tests/resolve_md/: test_resolve_md.py
tests/snippet_var_resolver/: test_snippet_var_resolver.py
