[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papermoon-mkdocs-plugins"
version = "0.1.0a4"
description = "A collection of MkDocs plugins"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Papermoon" },
]
license = "BSD-2-Clause"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.0",
  "pymdown-extensions>=10.0",
  "htmlmin>=0.1.12",
  "jsmin>=3.0.1",
  "csscompressor>=0.9.5",
]

[project.entry-points."mkdocs.plugins"]
minify = "plugins.minify.plugin:MinifyPlugin"
copy_md = "plugins.copy_md.plugin:CopyMDPlugin"
resolve_md = "plugins.resolve_md.plugin:ResolveMDPlugin"
page_toggle = "plugins.page_toggle.plugin:TogglePagesPlugin"
ai_resources_page = "plugins.ai_resources_page.plugin:AiResourcesPagePlugin"
ai_file_actions = "plugins.ai_file_actions.plugin:AiFileActionsPlugin"


# Configuration for development tools
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.package-data]
"*" = ["*.json"]