[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papermoon-mkdocs-plugins"
version = "0.1.0a5"
description = "A collection of MkDocs plugins"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Papermoon" },
]
license = "BSD-2-Clause"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.0",
  "pymdown-extensions>=10.0",
  "htmlmin2>=0.1.13",
  "jsmin>=3.0.1",
  "csscompressor>=0.9.5",
  "beautifulsoup4==4.14.2",
  "packaging>=23.0",
  "pyyaml>=6.0",
]

[project.entry-points."mkdocs.plugins"]
minify = "plugins.minify.plugin:MinifyPlugin"
copy_md = "plugins.copy_md.plugin:CopyMDPlugin"
resolve_md = "plugins.resolve_md.plugin:ResolveMDPlugin"
page_toggle = "plugins.page_toggle.plugin:TogglePagesPlugin"
ai_resources_page = "plugins.ai_resources_page.plugin:AiResourcesPagePlugin"
ai_file_actions = "plugins.ai_file_actions.plugin:AiFileActionsPlugin"
ai_page_actions = "plugins.ai_page_actions.plugin:AiPageActionsPlugin"


# Configuration for development tools
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
include = ["plugins*", "helper_lib*"]

[tool.setuptools.package-data]
"*" = ["*.json"]